--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="dropdown-menu">
               <ul>
                 <li><a href="#"></a>Donate</li>
-                <li><a href="#"></a>Volunteer</li>
+                <li><a href="volunteer.html"></a>Volunteer</li>
                 <li><a href="#"></a>FAQs</li>
                 <li><a href="#"></a>Legacy</li>
                 <li><a href="#"></a>Other Ways to Help</li>
@@ -81,7 +81,7 @@
         <button type="submit"><i class="fa fa-search cursor" aria-hidden="true"></i></button>
       </div>
       <div class="donate cursor" style="float: right;">
-        <a herf="donate_form.html"><img src="Photos\Donate-button-brb.png" alt="donateButton"></a>
+        <a herf="./donate_panel.html"><img src="Photos\Donate-button-brb.png" alt="donateButton"></a>
       </div>
     </nav>
   </div>
@@ -92,25 +92,273 @@
       <input type="radio" name="radio-button" id="radio3">
       <input type="radio" name="radio-button" id="radio4">
 
-       <div class="slide first "><img src="Photos\Hero-banners_DRTV-ads_Desktop-1.jpg"></div>
+      <div class="slide first "><img src="./Photos/img1.jpg"></div>
       <div class="slide"><img src="Photos\img2.jpg"></div>
       <div class="slide"><img src="Photos\img3.png" alt=""></div>
       <div class="slide"><img src="Photos\img4.jpg" alt=""></div>
-
-      <div class="navigation-auto">
-        <div class="auto-button1"></div>
-        <div class="auto-button2"></div>
-        <div class="auto-button3"></div>
-        <div class="auto-button4"></div>
-      </div>
     </div>
 
     <div class="navigation-manual" style="position: absolute;">
       <label for="radio1" class="manual-button1"></label>
       <label for="radio2" class="manual-button1"></label>
       <label for="radio3" class="manual-button1"></label>
-      <label for="radio4" class="manual-button1"></label> 
+      <label for="radio4" class="manual-button1"></label>
     </div>
+  </div>
+  <div class="history">
+    <div style="width: 42%;">
+      <h2>"bal Raksha," <br>"Bhavishya Raksha!"</h2>
+    </div>
+    <div style="width: 58%; padding: 50px;">
+      <p>For lasting change to happen, the hands of many must join as one.</p>
+      <p>"Since 2008, we’ve partnered with agencies at various levels towards actualizing the vision to build a new
+        “Bharat”: one where children are given equal opportunities, wholesome nutrition and protection from
+        exploitation; to untap the true potential of our Nation. We believe that a childhood nurtured holistically, is a
+        future well-secured."</p>
+      <p>We have impacted 16 states and the 14 million children already. And we’re just getting started on our journey
+        to Secure Childhood and Secure the Future. We will keep striving till every child gets educated, healthy,
+        inoculated and protected, keep working till all children are secure holistically.</p>
+      <p>We appreciate all the support that we can get on our quest. Check out our programs and choose how would you
+        like to shape a brighter future for the nation.</p>
+    </div>
+  </div>
+  <div class="field" style="width: 100%; line-height: 1.5; height: auto;">
+    <div class="fld">
+      <p style="width: 100%; text-align: center;"><img src="./Photos/fields.png"
+          style="width: 320px; text-align: center;"></p>
+    </div>
+    <div class="work" style="text-align: center;height: auto;">
+      <ul style="margin: 0; display: flex; justify-content: center;">
+        <li class="select">
+          <div class="hdng">
+            <p style="margin: 0px 0px 10px;">
+              <img src="./Photos/edu-icon-1.png" style="vertical-align: middle;">
+            </p>
+            <p style="text-align: center;font-size: 20px; font-weight: bolder;">Education</p>
+          </div>
+        </li>
+        <li>
+          <div class="hdng">
+            <p style="margin: 0px 0px 10px;">
+              <img src="./Photos/health-icon.png" style="vertical-align: middle;">
+            </p>
+            <p style="text-align: center;font-size: 20px; font-weight: bolder;">Health</p>
+          </div>
+        </li>
+        <li>
+          <div class="hdng">
+            <p style="margin: 0px 0px 10px;">
+              <img src="./Photos/nutrition-icon.png" style="vertical-align: middle;">
+            </p>
+            <p style="text-align: center;font-size: 20px; font-weight: bolder;">Nutrition</p>
+          </div>
+        </li>
+        <li>
+          <div class="hdng">
+            <p style="margin: 0px 0px 10px;">
+              <img src="./Photos/prot-icon.png" style="vertical-align: middle;">
+            </p>
+            <p style="text-align: center;font-size: 20px; font-weight: bolder;">Protection</p>
+          </div>
+        </li>
+        <li>
+          <div class="hdng">
+            <p style="margin: 0px 0px 10px;">
+              <img src="./Photos/inclucion-icon.png" style="vertical-align: middle;">
+            </p>
+            <p style="text-align: center;font-size: 20px; font-weight: bolder;">Education</p>
+          </div>
+        </li>
+        <li>
+          <div class="hdng">
+            <p style="margin: 0px 0px 10px;">
+              <img src="./Photos/res-icon.png" style="vertical-align: middle; size: 25px;">
+            </p>
+            <p style="text-align: center;font-size: 20px; font-weight: bolder;">Education</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div style="width: 100%;height: auto;">
+      <div class="edu" style="display: block;">
+        <p>
+          <a href="https://balrakshabharat.org/education/" target="_blank"
+            style="color: #337ab7; text-decoration: none;">
+            <img src="./Photos/Education.webp" style="vertical-align: middle;">
+          </a>
+        </p>
+      </div>
+    </div>
+    <div style="width: 100%;height: auto;">
+      <div class="edu" style="display: none;">
+        <p>
+          <a href="https://balrakshabharat.org/education/" target="_blank"
+            style="color: #337ab7; text-decoration: none;">
+            <img src="./Photos/Health.webp" style="vertical-align: middle;">
+          </a>
+        </p>
+      </div>
+    </div>
+    <div style="width: 100%;height: auto;">
+      <div class="edu" style="display:none;">
+        <p>
+          <a href="https://balrakshabharat.org/education/" target="_blank"
+            style="color: #337ab7; text-decoration: none;">
+            <img src="./Photos/Nutrition.webp" style="vertical-align: middle;">
+          </a>
+        </p>
+      </div>
+    </div>
+    <div style="width: 100%;height: auto;">
+      <div class="edu" style="display:none;">
+        <p>
+          <a href="https://balrakshabharat.org/education/" target="_blank"
+            style="color: #337ab7; text-decoration: none;">
+            <img src="./Photos/Protection.webp" style="vertical-align: middle;">
+          </a>
+        </p>
+      </div>
+    </div>
+    <div style="width: 100%;height: auto;">
+      <div class="edu" style="display:none;">
+        <p>
+          <a href="https://balrakshabharat.org/education/" target="_blank"
+            style="color: #337ab7; text-decoration: none;">
+            <img src="./Photos/Inclusion.webp" style="vertical-align: middle;">
+          </a>
+        </p>
+      </div>
+    </div>
+    <div style="width: 100%;height: auto;">
+      <div class="edu" style="display:none;">
+        <p>
+          <a href="https://balrakshabharat.org/education/" target="_blank"
+            style="color: #337ab7; text-decoration: none;">
+            <img src="./Photos/Resilience.webp" style="vertical-align: middle;">
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+  <p style="margin: 0px px 10px; text-align: center; padding-top: 40px;">
+    <img src="./Photos/award-headt.png" style="text-align: center; margin: 0 auto;">
+  </p>
+  <div class="award">
+    <div class="awds">
+      <input type="radio" name="rdo-btn" id="rdo1">
+      <input type="radio" name="rdo-btn" id="rdo2">
+      <div class="sld first"><img src="./Photos/Screenshot 2023-09-16 181026.png"></div>
+      <div class="sld"><img src="./Photos/Screenshot 2023-09-16 180909.png"></div>
+    </div>
+
+    <div class="manual" style="position: absolute;">
+      <label for="rdo1" class="mnl-btn"></label>
+      <label for="rdo2" class="mnl-btn"></label>
+    </div>
+  </div>
+  <p style="margin: 0px px 10px; text-align: center; padding-top: 40px;">
+    <img src="./Photos/Impact-2022.png" style="text-align: center; margin: 0 auto;">
+  </p>
+  <div style="padding: 30px 10%;">
+    <div class="impact">
+      <div class="msg" style="background: rgb(252, 237, 246);">
+        <p style="color: black;text-align: left; font-size: 24px;">
+          <span style="color: #e6a3e6; font-size: 48px; ">3,43,994</span>
+          <br>children have benefitted <br>from projects on healthcare <br>and nutrition in 2022
+        </p>
+      </div>
+      <div class="msg" style=" background: #faf8f3">
+        <p style="color: black;text-align: left; font-size: 24px;">
+          <span style="color: #efb646; font-size: 48px; ">6,21,931</span>
+          <br>children received support <br>through Humanitarian <br>relief work
+        </p>
+      </div>
+      <div class="msg" style=" background: #c1f4fb">
+        <p style="color: black;text-align: left; font-size: 24px;">
+          <span style="color: #4fabb8; font-size: 48px; ">3,32,873</span>
+          <br>children were reached <br>through projects on <br>education
+        </p>
+      </div>
+    </div>
+    <div class="btn">
+      <button>DOWNLOAD ANUAL REPORT 2022</button>
+    </div>
+  </div>
+
+  <footer style="background-size: 150px; background: red;">
+    <div class="footer">
+      <div class="column">
+        <img src="./Photos/logo-footer.webp">
+        <div class="contact" style="padding-top: 50px;display: block !important;">
+          <p style="color: white; font-size: 18px;"> Follow us on</p>
+          <ul class="social-icon" style="margin: 10px 0 0 ;">
+            <li class="icon">
+              <img src="./Photos/fb-1.png">
+            </li>
+            <li class="icon">
+              <img src="./Photos/ig.png">
+            </li>
+            <li class="icon">
+              <img src="./Photos/Twitter.png">
+            </li>
+            <li class="icon">
+              <img src="./Photos/Linkedin.png">
+            </li>
+            <li class="icon">
+              <img src="./Photos/yt-1.png">
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="column"></div>
+      <div class="column">
+        <h4>Who We Are?</h4>
+        <ul class="menu">
+          <li><a href="https://balrakshabharat.org/overview/"></a>Overviwe</li>
+          <li><a href="https://balrakshabharat.org/about-us/mission-and-vision/"></a>Mission & Vision</li>
+          <li><a href="#"></a>Our team</li>
+          <li><a href="#"></a>Child Rights</li>
+          <li><a href="#"></a>Financial</li>
+          <li><a href="#"></a>Raksha Journal</li>
+          <li><a href="#"></a>Latest Blog</li>
+          <li><a href="#"></a>Press Coverage</li>
+          <li><a href="#"></a>Evidence & Use</li>
+          <li><a href="#"></a>Child Participation</li>
+          <li><a href="#"></a>Quality & Learning</li>
+        </ul>
+      </div>
+      <div class="column">
+        <h4>What we do?</h4>
+        <ul class="menu">
+          <li><a href="#"></a>Education</li>
+          <li><a href="#"></a>Health & Nutrition</li>
+          <li><a href="#"></a>Our Programmes</li>
+          <li><a href="#"></a>Engagement with Government</li>
+          <li><a href="#"></a>Resilience</li>
+          <li><a href="#"></a>social Inclusion</li>
+          <li><a href="#"></a>Protection</li>
+          <li><a href="#"></a>Humanitarian</li>
+          <li><a href="#"></a>Child Champions</li>
+        </ul>
+      </div>
+      <div class="column">
+        <h4>Action Taken</h4>
+        <ul class="menu">
+          <li><a href="#"></a>Donate</li>
+          <li><a href="./volunteer.html"></a>Volunteer</li>
+          <li><a href="#"></a>FAQs</li>
+          <li><a href="#"></a>Legacy</li>
+          <li><a href="#"></a>Other Ways to Help</li>
+          <li><a href="#"></a>High Value Gifting</li>
+          <li><a href="#"></a>Contact Us</li>
+          <li><a href="#"></a>Carrers</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+  <div class="row">
+    <p>© 2023 Bal Raksha Bharat | All Rights Reserved</p>
+    <p style="float: right;"><a href="https://balrakshabharat.org/privacy-policy/">Privacy Policy</a></p>
   </div>
 </body>
 
