--- a/donate_panel.html
+++ b/donate_panel.html
@@ -28,131 +28,160 @@
                 </div>
             </nav>
         </div>
-        <div class="page" style="counter-reset: footnotes; display: block;">
-            <div class="donate-page" style="padding-top: 100px">
-                <div class="donate_content" style="padding: 0;">
-                    <section class="dntbox" style="position: absolute; left: 60px; width: 100%;">
-                        <div class="donate_left" style="flex: 1; width: 50%; position: relative;">
-                            <div class="left_img" style="margin-bottom: 30px">
-                                <img src="Photos/donate-img.webp"
-                                    style="position: relative; top: 0; left: 0; width: 100%;">
-                            </div>
-                            <p style="text-align: left; font-size: 18px">
-                                <span style="font-weight: 400; line-height: 1.5">
-                                    Since 2008, Bal Raksha Bharat has been working in several states
-                                    of India to help children get a happy childhood and a bright
-                                    future.<br>
-                                </span>
-                            </p>
-                            <p style="text-align: left; font-size: 18px">
-                                We work in close coordination with government agencies at various levels – National,
-                                State and
-                                District – to run child welfare projects. We work with the aim to support and
-                                contribute towards
-                                Government of India’s vision to build a “Bharat” where children are well-nurtured,
-                                with full
-                                opportunities for growth and development in a safe and protective environment.
-                            </p>
-                            <p style="text-align: left; font-size: 18px">
-                                Presently, we have presence across 15 states and 3 Union Territories of India and
-                                have impacted
-                                the lives of more than 10 million children since 2008.
-                            </p>
-                            <p style="text-align: left; font-size: 18px">
-                                We urge you to play your part in gifting a meaningful childhood to underprivileged
-                                children.
-                                Through your contributions, we can reach more children and support their various
-                                needs.
-                            </p>
-                            <h2 style="text-align: left; font-size: 28px;">DONATE NOW TO MAKE A DIFFERENCE</h2>
+        <div class="donatePage" style="padding-top:100px ;">
+            <div class="donatePageContent" style="padding: 0; width: 90%; text-align: center; margin: auto;">
+                <div class="dntContent" style="display: flex;">
+                    <div class="donate_left" style="float: left; flex: 1">
+                        <div class="left_img" style="margin-bottom: 30px">
+                            <img src="Photos/donate-img.webp" style="position: relative; top: 0; left: 0; width: 100%;">
                         </div>
-                        <div class="donate_right" style="width: 100%;">
-                            <div style="background-color: rgb(244, 232, 218);">
-                                <div class="box" style="width: 100%; padding: 20px;">
-                                    <div class="form" style="margin: 0px; display: inline;">
-                                        <h2 style="text-align: center;">I pledge to</h2>
-                                        <div class="donate_tabs">
-                                            <div class="tabs">
-                                                <input type="text" id="Onetime" amount="0" value="Give One Time">
-                                            </div>
-                                            <div class="tabs undefined">
-                                                <input type="text" id="Commited" amount="0" value="Give Monthly">
-                                            </div>
-                                            <div style="width: 100%; margin-bottom: 20px;">
-                                                <div class="form">
-                                                    <h2 style="text-align: center;">A sum of INR</h2>
-                                                    <div class="tabs">
-                                                        <input type="text" id="800RS" amount="800" value="800">
-                                                    </div>
-                                                    <div class="tabs">
-                                                        <input type="text" id="1200RS" amount="1200" value="1200">
-                                                    </div>
-                                                    <div class="info">
-                                                        <span>Can help provide continuous education support to one
-                                                            child</span>
-                                                    </div>
-                                                    <div class="tabs">
-                                                        <input type="text" id="1600RS" amount="1600" value="1600">
-                                                    </div>
-                                                    <div class="tabs">
-                                                        <input type="text" id="2400RS" amount="2400" value="2400">
-                                                    </div>
-                                                    <div class="other">
-                                                        <input type="text" maxlength="8" placeholder="Other Amount">
-                                                    </div>
-                                                    <div class="pay">
-                                                        <div class="pay-type">Payment Type</div>
-                                                        <div class="pay-option" style="display: flex;">
-                                                            <div class="pay-bank select">
-                                                                <span>
-                                                                    <input type="radio" name="paymentType"
-                                                                        value="E-Mandate" checked>
-                                                                </span>
-                                                                <strong
-                                                                    style="font-weight: 400; margin-left: 10px;">NETBANKING</strong>
-                                                            </div>
+                        <p style="text-align: left; font-size: 18px">
+                            <span style="font-weight: 400; line-height: 1.5">
+                                Since 2008, Bal Raksha Bharat has been working in several states
+                                of India to help children get a happy childhood and a bright
+                                future.<br>
+                            </span>
+                        </p>
+                        <p style="text-align: left; font-size: 18px">
+                            We work in close coordination with government agencies at various levels – National,
+                            State and
+                            District – to run child welfare projects. We work with the aim to support and
+                            contribute towards
+                            Government of India’s vision to build a “Bharat” where children are well-nurtured,
+                            with full
+                            opportunities for growth and development in a safe and protective environment.
+                        </p>
+                        <p style="text-align: left; font-size: 18px">
+                            Presently, we have presence across 15 states and 3 Union Territories of India and
+                            have impacted
+                            the lives of more than 10 million children since 2008.
+                        </p>
+                        <p style="text-align: left; font-size: 18px">
+                            We urge you to play your part in gifting a meaningful childhood to underprivileged
+                            children.
+                            Through your contributions, we can reach more children and support their various
+                            needs.
+                        </p>
+                        <h2 style="text-align: left; font-size: 28px;">DONATE NOW TO MAKE A DIFFERENCE</h2>
+                    </div>
+                    <div class="donate_right" style="float: right; margin-left: 50px;">
+                        <div style="background-color: rgb(244, 232, 218);">
+                            <div class="box" style="width: 100%; padding: 20px;">
+                                <div class="form" style="margin: 0px; display: inline;">
+                                    <h2 style="text-align: center;">I pledge to</h2>
+                                    <div class="donate_tabs">
+                                        <div class="tabs">
+                                            <input type="text" id="Onetime" amount="0" value="Give One Time">
+                                        </div>
+                                        <div class="tabs undefined">
+                                            <input type="text" id="Commited" amount="0" value="Give Monthly">
+                                        </div>
+                                        <div style="width: 100%; margin-bottom: 20px;">
+                                            <div class="form">
+                                                <h2 style="text-align: center;">A sum of INR</h2>
+                                                <div class="tabs">
+                                                    <input type="text" id="800RS" amount="₹ 800" value="₹ 800">
+                                                </div>
+                                                <div class="tabs">
+                                                    <input type="text" id="1200RS" amount="₹ 1200" value="₹ 1200">
+                                                </div>
+                                                <div class="info">
+                                                    <span>Can help provide continuous education support to one
+                                                        child</span>
+                                                </div>
+                                                <div class="tabs">
+                                                    <input type="text" id="1600RS" amount="1600" value="₹ 1600">
+                                                </div>
+                                                <div class="tabs">
+                                                    <input type="text" id="2400RS" amount="2400" value="₹ 2400">
+                                                </div>
+                                                <div class="other">
+                                                    <input type="text" maxlength="8" placeholder="Other Amount">
+                                                </div>
+                                                <div class="pay">
+                                                    <div class="pay-type">Payment Type</div>
+                                                    <div class="pay-option" style="display: flex;">
+                                                        <div class="pay-bank select">
+                                                            <span>
+                                                                <input type="radio" name="paymentType" value="E-Mandate"
+                                                                    checked>
+                                                            </span>
+                                                            <strong
+                                                                style="font-weight: 400; margin-left: 10px;">NETBANKING</strong>
                                                         </div>
                                                     </div>
-                                                    <div class="box-button">
-                                                        <input type="button" value="Donate Now">
-                                                    </div>
+                                                </div>
+                                                <div class="box-button">
+                                                    <input type="button" value="Donate Now">
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <p class="tax-rule" style="font-size: 14px;">
-                                <i>As per the Indian Income Tax Department’s rules, a donor is required to add their
-                                    Full Name, Address and PAN number in case they wish to claim tax exemption.</i>
-                            </p>
                         </div>
-                    </section>
+                        <p class="tax-rule" style="font-size: 14px;">
+                            <i>As per the Indian Income Tax Department’s rules, a donor is required to add their
+                                Full Name, Address and PAN number in case they wish to claim tax exemption.</i>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="impactImage">
+                <img src="./Photos/impactBanner.webp" alt="impactBanner" style="width: 100%; height: auto;">
+            </div>
+
+            <div class="dntContent2">
+                <div class="content" style="width: 90%; margin: auto; text-align: center; padding: 50px 0; height: auto;">
+                    <h2
+                        style="color: black; text-align: left; text-transform: uppercase; font-size: 32px; line-height: 1.1; margin: 0px 0px 20px;">
+                        <span style="color: #da291c; text-align: left; text-transform: uppercase;">
+                            Your donations have <br></span> "change lives"</h2>
+                    <p style="font-size: 19px; text-align: left;">Through the support of our donors, Bal Raksha Bharat
+                        has been implementing projects to cater to children’s various needs, making their childhood
+                        happier and more fulfilling. We are working relentlessly to give children a chance at building a
+                        brighter future. And in this quest, every bit of support counts.</p>
+                    <div style="text-align: left;">
+                        <a href="#" style="background: #009ca6; color: #fff;
+                            text-decoration: none; padding: 8px 20px; border-radius: 5px; 
+                            font-size: 20px; position: absolute; margin-top: 30px;
+                            text-align: left; margin-bottom: 30px;">be the change</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="banner">
-            <div>
-                <img src="Photos/Impact-English-1-1.webp">
+        <footer style="background-color: #333;margin-top: 80px;">
+            <div class="foot">
+                <div style="width: 100%; height: auto; display: flex;">
+                    <div class="row1" style="padding: 0px 15px;">
+                        <p><img src="./Photos/logo-130-1.webp"></p>
+                        <p>1st & 2nd Floor, Plot No. 91, Sector – 44 Gurgaon (Haryana) – 122003, India</p>
+                    </div>
+                    <div class="row2">
+                        <span style="color: white; font-size: 12px !important; justify-content: end;">© 2023 Bal Raksha
+                            Bharat</span>
+                        <a href="https://balrakshabharat.org/privacy-policy"
+                            style="font-size: 12px !important;color: white; text-decoration: none;">Term/Privacy | </a>
+                        <a href="#" target="_blank"
+                            style="text-decoration: none; font-size: 12px !important; color: white;">Contact us</a>
+                    </div>
+                </div>
+                <div class="disclaimer">
+                    <p style="color: white; font-size: 12px !important;"><strong>Disclaimer:</strong>Please note that
+                        the
+                        products mentioned are to illustrate activities and the change that your donation can make to
+                        the
+                        lives of children. Bal Raksha Bharat, based on the need on the ground, will allocate resources
+                        to
+                        areas that need funds the most. Data Security: We take utmost precautions with your data, we
+                        will
+                        never share your information. We also do not store any sensitive information like your credit
+                        card
+                        or bank details. All donations are tax-exempted under section 80G of the Income Tax Act, 1961.
+                    </p>
+                </div>
             </div>
-        </div>
-        
-    </div>
-    <div class="donate-page">
-        <div class="donate_content">
-            <div>
-                <h2
-                    style="color: white; margin-bottom: 20px; margin-top: 0px; text-align: left; text-transform: uppercase; font-size: 32px; line-height: 1.1;">
-                    <span style="color: #dadada; text-align: left; text-transform: uppercase;"> Your donation
-                        have</span>
-                    <br>"Chenged Lives."
-                </h2>
-                <p style="font-size: 20px; text-align: left;">Through the support of our donors, Bal Raksha Bharat
-                    has been implementing projects to cater to children’s various needs, making their childhood
-                    happier and more fulfilling. We are working relentlessly to give children a chance at building a
-                    brighter future. And in this quest, every bit of support counts.</p>
-            </div>
-        </div>
+        </footer>
     </div>
 </body>
 
