Changes in donate_panel

--- a/donate_panel.html
+++ b/donate_panel.html
@@ -13,6 +13,7 @@
 
     <title>Charity Donation Online to NGO Now</title>
 </head>
+
 <body>
     <div>
         <div id="header">
@@ -131,11 +132,13 @@
             </div>
 
             <div class="dntContent2">
-                <div class="content" style="width: 90%; margin: auto; text-align: center; padding: 50px 0; height: auto;">
+                <div class="content"
+                    style="width: 90%; margin: auto; text-align: center; padding: 50px 0; height: auto;">
                     <h2
                         style="color: black; text-align: left; text-transform: uppercase; font-size: 32px; line-height: 1.1; margin: 0px 0px 20px;">
                         <span style="color: #da291c; text-align: left; text-transform: uppercase;">
-                            Your donations have <br></span> "change lives"</h2>
+                            Your donations have <br></span> "change lives"
+                    </h2>
                     <p style="font-size: 19px; text-align: left;">Through the support of our donors, Bal Raksha Bharat
                         has been implementing projects to cater to children’s various needs, making their childhood
                         happier and more fulfilling. We are working relentlessly to give children a chance at building a
@@ -149,6 +152,28 @@
                 </div>
             </div>
         </div>
+        <footer style="background-size: 250px; background-color:#292928; margin-top: 90px;">
+            <div class="foot">
+                <div class="row1">
+                    <p><img src="./Photos/logo-130-1.webp"></p>
+                    <p>1st & 2nd Floor, Plot No. 91, Sector – 44 Gurgaon (Haryana) – 122003, India</p>
+                </div>
+                <div class="row2">
+                    <span style="color: white; font-size: 12px !important;">© 2023 Bal Raksha Bharat</span>
+                    <a href="https://balrakshabharat.org/privacy-policy" target="_blank"
+                        style="text-decoration: none; color: white; font-size: 12px !important;">Terms/Privacy | Contact us</a>
+                </div>
+            </div>
+            <div class="disclaimer" style=" background: #292928;">
+                <p style="color: white; font-size: 12px !important;padding-top:20px; margin: 0px 15px 20px;"><strong style="font-weight: bolder;">Disclaimer:</strong>Please note that the products
+                    mentioned are to illustrate activities and the change that your donation can make to the lives of
+                    children. Bal Raksha Bharat, based on the need on the ground, will allocate resources to areas that
+                    need funds the most. Data Security: We take utmost precautions with your data, we will never share
+                    your information. We also do not store any sensitive information like your credit card or bank
+                    details. All donations are tax-exempted under section 80G of the Income Tax Act, 1961.
+                </p>
+            </div>
+        </footer>
     </div>
 </body>
 
